修复ColorWidget，删除部分TODO